--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,10 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
           cache-dependency-path: ./package.json
+      - uses: actions/cache@v4
+        with:
+          path: test262/test262
+          key: ${{ hashFiles('test262/test262-commit-hash') }}
       - run: yarn
       - run: npm run build
       - run: npm run test
