--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
   },
   "scripts": {
     "build": "node scripts/build.mjs",
-    "lint": "npm run lint:eslint && npm run lint:types && npm run lint:prettier && npm run lint:cspell",
+    "lint": "npm run lint:eslint && npm run lint:types && npm run lint:prettier && npm run lint:cspell && npm run lint:knip",
     "lint:eslint": "eslint",
     "lint:prettier": "prettier . --check",
     "lint:cspell": "cspell . --gitignore",
     "lint:types": "tsc",
+    "lint:knip": "knip",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
@@ -96,6 +97,7 @@
     "eslint-plugin-unicorn": "^59.0.1",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "knip": "^5.61.2",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
     "rollup": "^4.39.0",
