--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "standard-changelog": "^6.0.0",
     "test262-parser-runner": "^0.5.0",
+    "test262-stream": "^1.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
     "vitest": "^3.1.1"
