--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "husky": "^9.1.7",
     "knip": "^5.61.3",
     "lint-staged": "^16.1.2",
+    "outdent": "^0.8.0",
     "prettier": "3.6.2",
     "rollup": "^4.44.1",
     "rollup-plugin-typescript2": "^0.36.0",
