Add test script

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,6 +41,7 @@ jobs:
       - run: yarn
       - run: npm run build
       - run: npm run test
+      - run: npm run test:unicode
       - run: npm run lint
 
   preview:
