--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "fix:prettier": "prettier . --write",
     "test": "vitest",
     "test:watch": "vitest --watch",
+    "test:unicode": "node scripts/generate-unicode.mjs --check",
     "production-test": "npm run build && cross-env PRODUCTION_TEST=1 vitest test/production/production-tests.ts",
     "prepare-nightly": "node scripts/bump-dev-version.mjs",
     "coverage": "vitest --coverage",
@@ -85,7 +86,7 @@
     "@stylistic/eslint-plugin": "^5.1.0",
     "@types/babel__code-frame": "^7.0.6",
     "@types/node": "^24.0.7",
-    "@unicode/unicode-16.0.0": "^1.6.6",
+    "@unicode/unicode-17.0.0": "^1.6.10",
     "@vitest/coverage-v8": "^3.2.4",
     "acorn": "^8.15.0",
     "coveralls": "^3.1.1",
